--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Challenge #2</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Heading</h1>
+    <div class="container">
+      <header class="header">
+          <h1>Challenge #2: Future CSS</h1>
+          <h2>Chosen Feature: CSS Nesting</h2>
+      </header>
+      <main class="content">
+          <section class="introduction">
+              <h2>Introduction to CSS Nesting</h2>
+              <h3> What is CSS Nesting?:</h3>
+              <p> Introduction </p>
+          </section>
+          <section class="examples">
+              <h2>Examples of Non-Nested CSS vs Nested CSS</h2>
+              <p>Nested rules make it easier to manage styles in a hierarchical manner.</p>
+              <h3> Example: Non-Nested CSS</h3>
+              <code> 
+                
+              </code>
+          </section>
+      </main>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
