--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
               <h2>Introduction to CSS Nesting</h2>
               <h3> What is CSS Nesting?:</h3>
               <p> CSS nesting is a new way to organize your CSS code, that helps reduce the redundancy of repeated selectors in CSS. Before nesting, each selector chosen would need to be expressly declared within the CSS for each rule set made. Nesting changes the game by allowing style rules to be "nested," where CSS selectors are structured within each other, reflecting the overall structure of the HTML written. </p>
+              <h3> What makes it better?</h3>
+              <p> </p>
           </section>
           <section class="examples">
               <h2>Examples of Non-Nested CSS vs Nested CSS</h2>
